--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,7 @@
 tasks:
   - init: yarn install
-  - command: yarn run serve
-image:
-  file: .gitpod.Dockerfile
+    command: yarn run serve
+
+ports:
+  - port: 3000
+    onOpen: open-browser
